Fixed spacing between panels and navbar on panel-only templates (login, logout, etc)

--- a/static_files/assets/sass/_layout.scss
+++ b/static_files/assets/sass/_layout.scss
@@ -215,10 +215,10 @@ nav #navinner {
             padding-right: 30px;
         }
     }
-
-    .page-top-action {
-        margin: 20px 0;
-    }
+}
+.page-content .page-top-action,
+.panel-page {
+    margin: 20px 0;
 }
 
 
